# Django_vod

./: .gitignore  pyproject.toml
blog/: pyproject.toml
blog/blog/: models.py  views.py
blog/blog/migrations/: 0001_initial.py
blog/blog/templates/blog/: blog_list.html
blog/config/: settings.py  urls.py
bookmark/bookmark/: models.py  views.py
bookmark/bookmark/migrations/: 0001_initial.py
bookmark/config/: settings.py  urls.py
bookmark/templates/: book_list.html  bookmark_detail.html  bookmark_list.html  music.html  musics.html
